--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@material-ui/core": "^4.12.2",
     "@react-three/drei": "^7.2.2",
     "@react-three/fiber": "^7.0.6",
-    "date-fns": "^2.23.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,7 +18,8 @@
     "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "rxjs": "^7.3.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.171",
